Fixed purpose dropdown text not being readable
main.diary.css
- created a new shadow CSS element called two-lines which allows the purpose button to be 2 lines long and then ellipse if it extends past that

trip_confirm_options.json.sample
- Added spaces in front of any "/", this way the word isn't cut off in the purpose selection when it goes past 2 lines (for example, "Entertainment/Socia(next line)l")

mode-popover.html
- Added the use of the new CSS override two-lines

purpose-popover.html
- Added the use of the new CSS override two-lines

--- a/www/css/main.diary.css
+++ b/www/css/main.diary.css
@@ -353,6 +353,17 @@ a.item-content {
   color: #0088ce;
 }
 
+/* Purpose selection Override */
+.two-lines .item-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  max-height: 65px;
+}
+
 /* Date Picker Override */
 .ionic_datepicker_popup .today {
   border: 1px solid #0088ce !important;
